fixed right bar alignment on larger screens, fixed consistency between right bar on home page and other pages

--- a/WebContent/resources/css/home.css
+++ b/WebContent/resources/css/home.css
@@ -19,8 +19,8 @@
 }
 
 .media{
-	min-height: 20%;
-	max-height: 20%;
+	/* min-height: 20%;
+	max-height: 20%; */
 	overflow:hidden;
 }
 
